fix double scroll bar

--- a/src/styles.css
+++ b/src/styles.css
@@ -69,6 +69,7 @@ body {
 
   border: 1px solid var(--bg-color);
   border-radius: 14px;
+  overflow: hidden;
 }
 
 .container {
